<resources>
    <string name="app_name">ComicsApp</string>

    <string name="try_again_button">Try Again!</string>
    <string name="refresh">Refresh</string>

    <string name="comics_loading_error_text">Error while loading comics</string>
    <string name="comics_loading_more">Loading More Comics&#8230;</string>

    <string name="comic_item_title_text">1602 Witch Hunter Angela #99</string>

    <string name="comic_detail_issue_number_field">Issue Number:</string>
    <string name="comic_detail_format_field">Format:</string>
    <string name="comic_detail_page_count_field">Page Count:</string>
    <string name="comic_detail_creators_field">Creators:</string>

    <string name="comic_image_content_description">Comic Image</string>

</resources>
